--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.2'
 
     compile 'com.github.bumptech.glide:glide:3.5.2'
+    compile 'org.parceler:parceler-api:1.1.1'
+    apt 'org.parceler:parceler:1.1.1'
 
 }
