--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'org.parceler:parceler-api:1.1.1'
     apt 'org.parceler:parceler:1.1.1'
-
+    compile 'jp.wasabeef:recyclerview-animators:2.2.0'
 }
