--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,6 @@ dependencies {
     compile 'org.parceler:parceler-api:1.1.1'
     apt 'org.parceler:parceler:1.1.1'
     compile 'jp.wasabeef:recyclerview-animators:2.2.0'
+
+    compile 'com.joooonho:selectableroundedimageview:1.0.1'
 }
